[project]
name = "cache-sync"
version = "0.3.1"
description = "Async hybrid Python cache with in-memory L1, distributed L2 providers, pluggable invalidation, stampede protection, and typed decorators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Peter Cinibulk" }]

# Published dependencies.
dependencies = []
keywords = ["async", "cache", "redis", "invalidation", "stampede-protection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Changelog = "https://github.com/petercinibulk/cache-sync/blob/main/CHANGELOG.md"
Documentation = "https://petercinibulk.github.io/cache-sync/"
Issues = "https://github.com/petercinibulk/cache-sync/issues"
Repository = "https://github.com/petercinibulk/cache-sync"

# Published optional dependencies, or "extras".
[project.optional-dependencies]
kafka = ["aiokafka>=0.10.0"]
postgres = ["asyncpg>=0.29.0"]
pydantic = ["pydantic>=1.10.0"]
rabbitmq = ["aio-pika>=9.0.0"]
redis = ["redis>=5.0.0"]
all = [
  "redis>=5.0.0",
  "aio-pika>=9.0.0",
  "aiokafka>=0.10.0",
  "asyncpg>=0.29.0",
  "pydantic>=1.10.0",
]

# Local dependencies for development.
[dependency-groups]
redis = ["redis>=5.0.0"]
rabbitmq = ["aio-pika>=9.0.0"]
kafka = ["aiokafka>=0.10.0"]
postgres = ["asyncpg>=0.29.0"]
pydantic = ["pydantic>=1.10.0"]
docs = ["zensical>=0.0.45"]
all = [
  { include-group = "redis" },
  { include-group = "rabbitmq" },
  { include-group = "kafka" },
  { include-group = "postgres" },
  { include-group = "pydantic" },
]
dev = [
  { include-group = "all" },
  { include-group = "docs" },
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.5.0",
  "ty>=0.0.1a8",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PERF", "RUF", "SIM", "UP", "W"]
ignore = ["B904", "UP046", "UP047"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = [
  "--cov=cache_sync",
  "--cov-report=term-missing",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
python-platform = "all"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
